infra/selenium/k8s/selenium-node-chrome-deploy.yaml

apiVersion: v1
kind: Service
metadata:
  name: selenium-node-chrome
  namespace: default
  labels:
    name: selenium-node-chrome
spec:
  type: NodePort
  selector:
    app: selenium-node-chrome
    browser: chrome
  ports:
    - name: nodeport
      protocol: TCP
      port: 5555
      targetPort: 5555
    - name: node-port-grid
      protocol: TCP
      port: 4444
      targetPort: 4444
    - name: node-port-rc
      protocol: TCP
      port: 5900
      targetPort: 5900
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-chrome
  namespace: default
  labels:
    app: selenium-node-chrome
    name: selenium-node-chrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-node-chrome
  template:
    metadata:
      labels:
        app: selenium-node-chrome
    spec:
      containers:
        - name: selenium-node-chrome
          # image: selenium/node-chrome:3.141.59-xenon
          image: selenium/node-chrome-debug:3.141
          ports:
            - containerPort: 4444
              protocol: TCP
            - containerPort: 5555
              protocol: TCP
            # VNC Viewer Port
            - containerPort: 5900
              protocol: TCP
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1"
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: dshm
          emptyDir: { "medium": "Memory" }
