infra/selenium/k8s/selenium-hub-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  namespace: default
  labels:
    name: selenium-hub
spec:
  type: NodePort
  selector:
    app: selenium-hub
  ports:
    - name: web
      protocol: TCP
      port: 4444
      targetPort: 4444
    - name: node
      protocol: TCP
      port: 5555
      targetPort: 5555
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub
  namespace: default
  labels:
    app: selenium-hub
    name: selenium-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-hub
  template:
    metadata:
      labels:
        app: selenium-hub
    spec:
      containers:
        - name: selenium-hub
          image: selenium/hub:3.141.59-xenon
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1"
          ports:
            - containerPort: 4444
              protocol: TCP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: selenium-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io: /$1
spec:
  rules:
    - host: selenium-grid.raulickis.com
      http:
        paths:
          - path: /
            backend:
              serviceName: selenium-hub-deployment
              servicePort: 4444
